# image_proc_custom

./: .gitignore  CMakeLists.txt  manifest.xml  nodelet_plugins.xml  package.xml
cfg/: CropDecimate.cfg  Scale.cfg
launch/: test.launch
src/nodelets/: crop_decimate.cpp  crop_decimate2.cpp  scale.cpp  scale_nodelet.cpp
