<package>

  <name>image_proc_custom</name>
  <version>1.0.0</version>
  <description>Single image rectification and color processing.</description>
  <author>Patrick Mihelich, Kurt Konolige, Jeremy Leibs</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/image_proc_custom</url>
  <url type="bugtracker">https://github.com/srv/image_proc_custom/issues</url> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend> 
  <build_depend>image_geometry</build_depend> 
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend> 
  <run_depend>image_geometry</run_depend> 
  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/cfg/cpp" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -limage_proc" />
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
